// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENTS - App renders self and correct routes 1`] = `
<App>
  <section>
    <styled.h1>
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": true,
              "lastClassName": "iulWLw",
              "rules": Array [
                "
  font-size: 2rem;
  font-weight: 700;
  font-family: sans-serif;
",
              ],
            },
            "displayName": "styled.h1",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "h1",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <h1
          className="sc-bdVaJa iulWLw"
        >
          Hello Khol's
        </h1>
      </StyledComponent>
    </styled.h1>
    <Route
      component={[Function]}
      exact={true}
      path="/cart"
    >
      <Cart
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "pathname": "/cart",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/cart",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "pathname": "/cart",
            "search": "",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {},
            "path": "/cart",
            "url": "/cart",
          }
        }
      >
        <section>
          <h2>
            Cart placeholder
          </h2>
        </section>
      </Cart>
    </Route>
    <Route
      component={[Function]}
      exact={true}
      path="/checkout/:checkoutStep"
    />
  </section>
</App>
`;

exports[`COMPONENTS - App renders self and correct routes 2`] = `
<App>
  <section>
    <styled.h1>
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": true,
              "lastClassName": "iulWLw",
              "rules": Array [
                "
  font-size: 2rem;
  font-weight: 700;
  font-family: sans-serif;
",
              ],
            },
            "displayName": "styled.h1",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "h1",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <h1
          className="sc-bdVaJa iulWLw"
        >
          Hello Khol's
        </h1>
      </StyledComponent>
    </styled.h1>
    <Route
      component={[Function]}
      exact={true}
      path="/cart"
    />
    <Route
      component={[Function]}
      exact={true}
      path="/checkout/:checkoutStep"
    >
      <Checkout
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "pathname": "/checkout/testStep",
                "search": "",
                "state": undefined,
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "pathname": "/checkout/testStep",
              "search": "",
              "state": undefined,
            },
            "push": [Function],
            "replace": [Function],
          }
        }
        location={
          Object {
            "hash": "",
            "pathname": "/checkout/testStep",
            "search": "",
            "state": undefined,
          }
        }
        match={
          Object {
            "isExact": true,
            "params": Object {
              "checkoutStep": "testStep",
            },
            "path": "/checkout/:checkoutStep",
            "url": "/checkout/testStep",
          }
        }
      >
        <section>
          <h2>
            Checkout placeholder
          </h2>
          <Route
            component={[Function]}
            path="/checkout/delivery"
          />
          <Route
            component={[Function]}
            path="/checkout/payment"
          />
          <Route
            component={[Function]}
            path="/checkout/review"
          />
        </section>
      </Checkout>
    </Route>
  </section>
</App>
`;
